FireAlarmApplication.Web/mtg_debug_20260127_151745.txt

=== MTG FIRE DEBUG ===
Time: 2026-01-27 15:17:45
NetCDF: C:\Users\kubil\AppData\Local\Temp\f26fe8f0-c0a6-4a10-86af-e5cc8e1fbf7b.nc

=== PYTHON STDERR (Debug Output) ===
  File "C:\Users\kubil\source\repos\FireAlarmApplication\FireAlarmApplication.Web\Scripts\parse_mtg_fire.py", line 32
    max_lat = float(parts[2])x""
                             ^
SyntaxError: invalid syntax


=== PYTHON STDOUT (JSON Output) ===


=== EXIT CODE ===
1
